fix xA/90 on table not showing and styling improvements

--- a/frontend/src/components/PlayerData.css
+++ b/frontend/src/components/PlayerData.css
@@ -97,6 +97,7 @@
   font-weight: 500;
   font-size: 18px;
   width: 100%;
+  max-width: max-content;
   box-sizing: border-box;
 }
 
